# usedevkit

./: .gitignore  CHANGELOG.md  GAP_ANALYSIS.md  README.md  push-to-github.sh
.claude/: settings.local.json
backend/: pom.xml
backend/docs/: API_REFERENCE.md  ConfigHub_MultiTenancy_RBAC.postman_collection.json  ENVIRONMENT_PROMOTION.md  GAP_ANALYSIS.md  MULTI_TENANCY_RBAC.md  TENANT_ID_IMPLEMENTATION_GUIDE.md  WEBHOOKS_NOTIFICATIONS.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/client/: mod.rs
cli/src/commands/: apps.rs  config.rs  mod.rs  secrets.rs
cli/src/config/: mod.rs
docs/: DYNAMIC_CONFIGURATION.md  FEATURE_FLAGS_MVP.md  SDKS.md  SECRETS_ROTATION.md  SERVICE_CATALOG.md
documentos/: 00-ARCHITECTURE.md  00-INDEX.md  01-BACKEND.md  02-FRONTEND.md  03-CLIENT-JAVA.md  04-CLIENT-TYPESCRIPT.md  05-CLIENT-FLUTTER.md  06-CLI.md  07-DEPLOYMENT.md  08-CONTRIBUTING.md  09-LANDING-PAGE.md  10-LANDING-CODE.md  11-LANDING-CODE-PT2.md  12-FEATURE-FLAGS.md  13-DYNAMIC-CONFIG.md  22-ROADMAP-COMPLETE.md  23-QUICK-START.md  24-EXECUTIVE-SUMMARY.md  25-BRAND-GUIDELINES.md  26-REBRANDING-SUMMARY.md  README-NEW.md  README.md
examples/: DynamicConfigExample.java  flutter-example.dart  typescript-node-example.ts
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: utils.ts
landing/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: CodeExamples.tsx  Comparison.tsx  Features.tsx  Footer.tsx  (+5 more)
(+365 files in other folders)
