[package]
name = "devkit"
version = "0.1.0"
edition = "2021"
authors = ["DevKit Team"]
description = "DevKit CLI - manage configs, secrets, and feature flags"
license = "MIT"
repository = "https://github.com/usedevkit/devkit"

[[bin]]
name = "devkit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
